.kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
spec:
  selector:
    matchLabels:
      app: weather
  replicas: 1
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
        - name: weather
          image: grantjamespowell/weather:43e1f465e56b79ea15a34fbd231b08b167e39adf
          ports:
            - containerPort: 80
