.kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: weather
spec:
  selector:
    app: weather
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
