.kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weather
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
    - hosts:
        - weather.grantjamespowell.com
      secretName: weather-grantjamespowell-prodcert
  rules:
    - host: weather.grantjamespowell.com
      http:
        paths:
          - path: /
            backend:
              serviceName: weather
              servicePort: 80
